--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Create Sublime package
-        run: zip -r Focus.sublime-package . -x ".git/*" ".github/*" .gitignore
+        run: git archive --format=zip --output=Focus.sublime-package HEAD
 
       - name: Release
         uses: softprops/action-gh-release@v1
